--- a/Site/Web.config
+++ b/Site/Web.config
@@ -16,7 +16,9 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-Site-146fd2d0-de42-435b-bd0c-17a86319edcc;AttachDbFilename=|DataDirectory|\aspnet-Site-146fd2d0-de42-435b-bd0c-17a86319edcc.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
-    <httpRuntime targetFramework="4.5.2" executionTimeout="100000" maxRequestLength="1024000" 
+    <httpRuntime targetFramework="4.5.2" 
+                 executionTimeout="100000" 
+                 maxRequestLength="1024000" 
                  maxQueryStringLength="1024000" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
