--- a/Running.Video.AWS/Running.Video.AWS.csproj
+++ b/Running.Video.AWS/Running.Video.AWS.csproj
@@ -1,18 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D0C5E295-8CD6-435F-85EB-4D02120D2C50}</ProjectGuid>
+    <ProjectGuid>44d970b9-006c-433f-a565-a2af2fcff9b8</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Running.Video</RootNamespace>
-    <AssemblyName>Running.Video</AssemblyName>
+    <RootNamespace>Running.Video.AWS</RootNamespace>
+    <AssemblyName>Running.Video.AWS</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,30 +30,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System"/>
+    
+    <Reference Include="System.Core"/>
+    <Reference Include="System.Xml.Linq"/>
+    <Reference Include="System.Data.DataSetExtensions"/>
+    
+    
+    <Reference Include="Microsoft.CSharp"/>
+    
+    <Reference Include="System.Data"/>
+    
+    <Reference Include="System.Net.Http"/>
+    
+    <Reference Include="System.Xml"/>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConversionCompletedEventArgs.cs" />
-    <Compile Include="ConversionProgressEventArgs.cs" />
-    <Compile Include="ConversionStatusEnum.cs" />
-    <Compile Include="IHLSConversionJob.cs" />
-    <Compile Include="Manager\IVideoConversionJobInfo.cs" />
-    <Compile Include="Manager\IVideoConversionQueueRepository.cs" />
-    <Compile Include="Manager\BasicVideoConverionJobInfo.cs" />
-    <Compile Include="Manager\JobQueueResultEnum.cs" />
-    <Compile Include="Manager\VideoConversionManager.cs" />
-    <Compile Include="MasterPlayList.cs" />
-    <Compile Include="PlayList.cs" />
-    <Compile Include="SourceInfo.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MediaSegment.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -65,4 +57,5 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-</Project>
+
+ </Project>
