--- a/Running.Video.FFMPEG/Running.Video.FFMPEG.csproj
+++ b/Running.Video.FFMPEG/Running.Video.FFMPEG.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FFMPEGConversionJobManager.cs" />
     <Compile Include="HLSConversionJob.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
